refactor code and add subtitle

--- a/perfil.html
+++ b/perfil.html
@@ -23,8 +23,13 @@
                 </ul>
             </div>
             <div class="apresentacao-presidente-redes">
-                <a class="apresentacao-presidente-links" href="https://www.instagram.com/lulaoficial/">Instagram</a>
-                <a class="apresentacao-presidente-links" href="https://www.linkedin.com/in/lulaoficial/">LinkedIn</a>
+                <h2 class="apresentacao-presidente-redes-subtitulo">Redes</h2>
+                <a class="apresentacao-presidente-links" href="https://www.instagram.com/lulaoficial/">
+                    Instagram
+                </a>
+                <a class="apresentacao-presidente-links" href="https://www.linkedin.com/in/lulaoficial/">
+                    LinkedIn
+                </a>
             </div>
         </section>
         <img src="./assets/foto-lula.jpg" alt="foto do nosso presidente lulinha inacinho na nova posse">
