add new classes

--- a/perfil.html
+++ b/perfil.html
@@ -25,6 +25,7 @@
             <div class="apresentacao-presidente-redes">
                 <h2 class="apresentacao-presidente-redes-subtitulo">Redes</h2>
                 <a class="apresentacao-presidente-links" href="https://www.instagram.com/lulaoficial/">
+                    <img class="apresentacao-presidente-links-icone" src="https://img.icons8.com/?size=100&id=EPGwLJfY346B&format=png&color=000000">
                     Instagram
                 </a>
                 <a class="apresentacao-presidente-links" href="https://www.linkedin.com/in/lulaoficial/">
@@ -32,7 +33,7 @@
                 </a>
             </div>
         </section>
-        <img src="./assets/foto-lula.jpg" alt="foto do nosso presidente lulinha inacinho na nova posse">
+        <img class="apresentacao-presidente-imagem" src="./assets/foto-lula.jpg" alt="foto do nosso presidente lulinha inacinho na nova posse">
     </main>
     <footer class="rodape"></footer>
 </body>
