add footer and header example

--- a/perfil.html
+++ b/perfil.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    <header class="cabecalho"></header>
+    <header class="cabecalho">
+        Exemplo de Header
+    </header>
     <main class="apresentacao">
         <section class="apresentacao-presidente">
             <h1 class="apresentacao-presidente-titulo">Lula, presidente do <strong class="destaque-titulo">Brasil!</strong></h1>
@@ -29,12 +31,15 @@
                     Instagram
                 </a>
                 <a class="apresentacao-presidente-links" href="https://www.linkedin.com/in/lulaoficial/">
+                    <img class="apresentacao-presidente-links-icone" src="https://img.icons8.com/?size=100&id=32292&format=png&color=000000">
                     LinkedIn
                 </a>
             </div>
         </section>
         <img class="apresentacao-presidente-imagem" src="./assets/foto-lula.jpg" alt="foto do nosso presidente lulinha inacinho na nova posse">
     </main>
-    <footer class="rodape"></footer>
+    <footer class="rodape">
+        Exemplo de Footer
+    </footer>
 </body>
 </html>
