--- a/perfil.html
+++ b/perfil.html
@@ -11,32 +11,32 @@
         Exemplo de Header
     </header>
     <main class="apresentacao">
-        <section class="apresentacao-presidente">
-            <h1 class="apresentacao-presidente-titulo">Lula, presidente do <strong class="destaque-titulo">Brasil!</strong></h1>
-            <p class="apresentacao-presidente-texto">Em dezembro de 1952, dona Lindu e os <strong class="destaque-titulo">oito filhos</strong> migraram para São Paulo, <strong class="destaque-titulo">fugindo da seca e da fome</strong>. Foram 13 dias de viagem num caminhão "pau de arara". De início, a família morou na periferia de Guarujá, cidade a 60 quilômetros da capital do estado.</p>
-            <p class="apresentacao-presidente-texto">O menino Lula foi alfabetizado no Grupo Escolar Marcílio Dias. Em 1956, a família mudou-se para São Paulo, a capital, passando a morar num único cômodo, nos fundos de um bar no bairro Ipiranga. Aos <strong class="destaque-titulo">12 anos de idade</strong>, Lula conseguiu seu <strong class="destaque-titulo">primeiro emprego</strong>, numa tinturaria. Também foi engraxate e office-boy.</p>
-            <p class="apresentacao-presidente-texto">Com 14, começou a trabalhar nos Armazéns Gerais Columbia, onde teve a <strong class="destaque-titulo">Carteira de Trabalho assinada pela primeira vez</strong>. Transferiu-se depois para a Fábrica de Parafusos Marte e obteve uma vaga no curso de torneiro mecânico do Serviço Nacional de Aprendizagem Industrial (Senai). O curso durou três anos, e Lula tornou-se metalúrgico.</p>
-            <div class="apresentacao-presidente-hobbies">
-                <h2 class="apresentacao-presidente-hobbies-subtitulo">Hobbies</h2>
-                <ul class="apresentacao-presidente-hobbies-lista">
-                    <li class="apresentacao-presidente-hobbies-item">Jogar futebol</li>
-                    <li class="apresentacao-presidente-hobbies-item">Assistir filmes</li>
-                    <li class="apresentacao-presidente-hobbies-item">Ler livros</li>
+        <section class="apresentacao-conteudo">
+            <h1 class="apresentacao-conteudo-titulo">Lula, presidente do <strong class="destaque-titulo">Brasil!</strong></h1>
+            <p class="apresentacao-conteudo-texto">Em dezembro de 1952, dona Lindu e os <strong class="destaque-titulo">oito filhos</strong> migraram para São Paulo, <strong class="destaque-titulo">fugindo da seca e da fome</strong>. Foram 13 dias de viagem num caminhão "pau de arara". De início, a família morou na periferia de Guarujá, cidade a 60 quilômetros da capital do estado.</p>
+            <p class="apresentacao-conteudo-texto">O menino Lula foi alfabetizado no Grupo Escolar Marcílio Dias. Em 1956, a família mudou-se para São Paulo, a capital, passando a morar num único cômodo, nos fundos de um bar no bairro Ipiranga. Aos <strong class="destaque-titulo">12 anos de idade</strong>, Lula conseguiu seu <strong class="destaque-titulo">primeiro emprego</strong>, numa tinturaria. Também foi engraxate e office-boy.</p>
+            <p class="apresentacao-conteudo-texto">Com 14, começou a trabalhar nos Armazéns Gerais Columbia, onde teve a <strong class="destaque-titulo">Carteira de Trabalho assinada pela primeira vez</strong>. Transferiu-se depois para a Fábrica de Parafusos Marte e obteve uma vaga no curso de torneiro mecânico do Serviço Nacional de Aprendizagem Industrial (Senai). O curso durou três anos, e Lula tornou-se metalúrgico.</p>
+            <div class="apresentacao-conteudo-hobbies">
+                <h2 class="apresentacao-conteudo-hobbies-subtitulo">Hobbies</h2>
+                <ul class="apresentacao-conteudo-hobbies-lista">
+                    <li class="apresentacao-conteudo-hobbies-item">Jogar futebol</li>
+                    <li class="apresentacao-conteudo-hobbies-item">Assistir filmes</li>
+                    <li class="apresentacao-conteudo-hobbies-item">Ler livros</li>
                 </ul>
             </div>
-            <div class="apresentacao-presidente-redes">
-                <h2 class="apresentacao-presidente-redes-subtitulo">Redes</h2>
-                <a class="apresentacao-presidente-links" href="https://www.instagram.com/lulaoficial/">
-                    <img class="apresentacao-presidente-links-icone" src="https://img.icons8.com/?size=100&id=EPGwLJfY346B&format=png&color=000000">
+            <div class="apresentacao-conteudo-redes">
+                <h2 class="apresentacao-conteudo-redes-subtitulo">Redes</h2>
+                <a class="apresentacao-conteudo-links" href="https://www.instagram.com/lulaoficial/">
+                    <img class="apresentacao-conteudo-links-icone" src="https://img.icons8.com/?size=100&id=EPGwLJfY346B&format=png&color=000000">
                     Instagram
                 </a>
-                <a class="apresentacao-presidente-links" href="https://www.linkedin.com/in/lulaoficial/">
-                    <img class="apresentacao-presidente-links-icone" src="https://img.icons8.com/?size=100&id=32292&format=png&color=000000">
+                <a class="apresentacao-conteudo-links" href="https://www.linkedin.com/in/lulaoficial/">
+                    <img class="apresentacao-conteudo-links-icone" src="https://img.icons8.com/?size=100&id=32292&format=png&color=000000">
                     LinkedIn
                 </a>
             </div>
         </section>
-        <img class="apresentacao-presidente-imagem" src="./assets/foto-lula.jpg" alt="foto do nosso presidente lulinha inacinho na nova posse">
+        <img class="apresentacao-conteudo-imagem" src="./assets/foto-lula.jpg" alt="foto do nosso presidente lulinha inacinho na nova posse">
     </main>
     <footer class="rodape">
         Exemplo de Footer
