refactor code and modularize index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,22 @@
 </head>
 <body>
     <header class="cabecalho">
-        Exemplo de Header
+        <nav class="cabecalho-menu">
+            <a href="">Home</a>
+            <a href="./pages/">Contato</a>
+            <a href="./pages/">Portfolio</a>
+            <a href="./pages/">Blog</a>
+            <a href="./pages/">Currículo</a>
+            <a href="./pages/">Agenda</a>
+            <a href="./pages/">FAQ</a>
+            <a href="./pages/">Galeria</a>
+            <a href="./pages/">Podcast</a>
+            <a href="./pages/">Locadora</a>
+        </nav>
+        <nav class="cabecalho-menu-responsivo">
+            <a href="">Home</a>
+            <a href="">Paginas</a>
+        </nav>
     </header>
     <main class="apresentacao">
         <section class="apresentacao-conteudo">
@@ -36,7 +51,7 @@
                 </a>
             </div>
         </section>
-        <img class="apresentacao-conteudo-imagem" src="./assets/foto-lula.jpg" alt="foto do nosso presidente lulinha inacinho na nova posse">
+        <img class="apresentacao-conteudo-imagem" src="./assets/foto-presidente.jpg" alt="foto do nosso presidente lulinha inacinho na nova posse">
     </main>
     <footer class="rodape">
         Exemplo de Footer
