--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <header class="cabecalho">
         <nav class="cabecalho-menu">
             <a href="">Home</a>
-            <a href="./pages/">Contato</a>
-            <a href="./pages/">Portfolio</a>
-            <a href="./pages/">Blog</a>
-            <a href="./pages/">Currículo</a>
-            <a href="./pages/">Agenda</a>
-            <a href="./pages/">FAQ</a>
-            <a href="./pages/">Galeria</a>
-            <a href="./pages/">Podcast</a>
-            <a href="./pages/">Locadora</a>
+            <a href="./pages/contact.html">Contato</a>
+            <a href="./pages/portfolio.html">Portfolio</a>
+            <a href="./pages/blog.html">Blog</a>
+            <a href="./pages/cv.html">Currículo</a>
+            <a href="./pages/agenda.html">Agenda</a>
+            <a href="./pages/faq.html">FAQ</a>
+            <a href="./pages/galeria.html">Galeria</a>
+            <a href="./pages/podcast.html">Podcast</a>
+            <a href="./pages/locadora.html">Locadora</a>
         </nav>
         <nav class="cabecalho-menu-responsivo">
             <a href="">Home</a>
