--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </nav>
         <nav class="cabecalho-menu-responsivo">
             <a href="">Home</a>
-            <a href="">Paginas</a>
+            <a href="./pages/paginas.html">Paginas</a>
         </nav>
     </header>
     <main class="apresentacao">
