--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <img class="apresentacao-conteudo-imagem" src="./assets/foto-presidente.jpg" alt="foto do nosso presidente lulinha inacinho na nova posse">
     </main>
     <footer class="rodape">
-        Exemplo de Footer
+        <p class="rodape-texto">Desenvolvido por <strong class="destaque-titulo">Ruan David</strong></p>
     </footer>
 </body>
 </html>
