--- a/pages/agenda.html
+++ b/pages/agenda.html
@@ -29,7 +29,7 @@
         
     </main>
     <footer class="rodape">
-
+        <p class="rodape-texto">Desenvolvido por <strong class="destaque-titulo">Ruan David</strong></p>
     </footer>
 </body>
 </html>
