--- a/pages/paginas.html
+++ b/pages/paginas.html
@@ -40,7 +40,7 @@
         </nav>
     </main>
     <footer class="rodape">
-
+        <p class="rodape-texto">Desenvolvido por <strong class="destaque-titulo">Ruan David</strong></p>
     </footer>
 </body>
 </html>
