--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
-    <header class="cabecalho">
-        <nav class="cabecalho-menu">
+    <header class="cabecalho-portfolio">
+        <!-- <nav class="cabecalho-menu">
             <a href="../index.html">Home</a>
             <a href="./contact.html">Contato</a>
             <a href="./portfolio.html">Portfolio</a>
@@ -19,17 +19,29 @@
             <a href="./galeria.html">Galeria</a>
             <a href="./podcast.html">Podcast</a>
             <a href="./locadora.html">Locadora</a>
+        </nav> -->
+        <nav class="cabecalho-menu-portfolio">
+            <a href="../index.html">Home</a>
+            <a href="./paginas.html">Paginas</a>
         </nav>
-        <nav class="cabecalho-menu-responsivo">
-            <a href="">Home</a>
-            <a href="">Paginas</a>
-        </nav>
+        <div class="cabecalho-titulo">
+            <p class="cabecalho-titulo-portifolio">Portfolio Frontend</p>
+        </div>
     </header>
     <main class="conteudo">
-
+        <section class="navegacao">
+            <nav class="navegacao-menu">
+                <!-- TODO: 2. Uma seção de navegação com links para dierentes seções da página. -->
+            </nav>
+        </section>
+        <section class="projetos">
+            <!-- TODO: 3. Uma seção de projetos que exiba pelo menos três projetos, cada um com uma imagem, título e descrição. -->
+        </section>
     </main>
     <footer class="rodape">
-
+        <p class="rodape-texto">Desenvolvido por <strong class="destaque-titulo">Ruan David</strong></p>
+        <br><br>
+        <a class="apresentacao-conteudo-links" href="./contact.html">Contato</a>
     </footer>
 </body>
 </html>
