--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
             <div class="apresentacao-conteudo-redes">
                 <h2 class="apresentacao-conteudo-redes-subtitulo">Redes</h2>
                 <a class="apresentacao-conteudo-links" href="https://www.instagram.com/lulaoficial/">
-                    <img class="apresentacao-conteudo-links-icone" src="https://img.icons8.com/?size=100&id=EPGwLJfY346B&format=png&color=000000">
+                    <img alt="icone do instagram" class="apresentacao-conteudo-links-icone" src="https://img.icons8.com/?size=100&id=EPGwLJfY346B&format=png&color=000000">
                     Instagram
                 </a>
                 <a class="apresentacao-conteudo-links" href="https://www.linkedin.com/in/lulaoficial/">
-                    <img class="apresentacao-conteudo-links-icone" src="https://img.icons8.com/?size=100&id=32292&format=png&color=000000">
+                    <img alt="icone do linkedin" class="apresentacao-conteudo-links-icone" src="https://img.icons8.com/?size=100&id=32292&format=png&color=000000">
                     LinkedIn
                 </a>
             </div>
