easter egg commit

--- a/index.html
+++ b/index.html
@@ -56,5 +56,6 @@
     <footer class="rodape">
         <p class="rodape-texto">Desenvolvido por <strong class="destaque-titulo">Ruan David</strong></p>
     </footer>
+    <p style="display: none;">I can't save the world if I can't save myself... Gun pointed at my mental health. Squeezing on the trigger if it makes me well</p>
 </body>
 </html>
