fix user comments

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -49,11 +49,11 @@
         <section class="blog-comentarios">
             <h2 class="blog-comentarios-titulo">Comentários</h2>
             <article class="blog-comentarios-post">
-                <h3 class="blog-comentarios-post-subtitulo">Joana Valadares</h3>
+                <h3 class="blog-comentarios-post-subtitulo">Clean Codo</h3>
                 <p class="blog-comentarios-post-texto">Lorem ipsum dolor sit amet dor.</p>
             </article>
             <article class="blog-comentarios-post">
-                <h3 class="blog-comentarios-post-subtitulo">Joana Valadares</h3>
+                <h3 class="blog-comentarios-post-subtitulo">Javo Scripto</h3>
                 <p class="blog-comentarios-post-texto">Lorem ipsum dolor sit amet dor.</p>
             </article>
         </section>
