add legacy html as cv page

--- a/pages/cv.html
+++ b/pages/cv.html
@@ -26,7 +26,79 @@
         </nav>
     </header>
     <main class="conteudo">
+        <p style="text-align: center; color: #0FF">DISCLAIMER: Essa página foi reutilizada, ela representa um dos meus primeiros contatos com código, essa página é de 2 anos atrás e pode ser encontrada em: <a rel="noreferrer" target="_blank" href="https://killjoybr.github.io/CV/">https://killjoybr.github.io/CV/</a> e seu repositório é o seguinte: <a target="_blank" rel="noreferrer" href="https://github.com/killjoybr/CV/">https://github.com/killjoybr/CV/</a></p>
+        <!--
+            TODO: 1. Um cabeçalho com o nome e o título profssional.
+            TODO: 2. Uma seção de inormações de contato.
+            TODO: 3. Uma seção de experiência profssional com pelo menos três experiências.
+            TODO: 4. Uma seção de educação com pelo menos três ormações acadêmicas.
+        -->
+        <table>
+            <td><img src="https://killjoybr.github.io/CV/images/pfp.png" alt="David pfp" style="height:120px; width: 120px;"></td>
+            <td>
+                <h1>David da Silva</h1>
+                <p><em>Tech craftsman and scholar</em></p>
+                <p>I'm a computer engineering student at CEUB, currently on 4th semester, and I love studying anything related to culture and technology. Firstly I wasn't thinking about programming but gladly I had a
+                    friend, which already graduated and is my role model, that was always telling me that the sooner I started, the sooner I would have good results and develop important skills</p>
+            </td>
+        </table>
+        <hr>
+        <h3>Scholar's Life</h3>
+        <dl>
+            <dt>English Teacher</dt>
+            <dd>My first real contribution regarding teaching was when I finished my english studies and lectured kids, young adults and adults at <b>Wizard</b></dd>
+            <dt>Gaming Coach</dt>
+            <dd>I love video games and almost at the same period that I was an english teacher, I used to coordenate some of my friends that also had this passion towards gaming.</dd>
+            <dt>Streaming Profile Technician</dt>
+            <dd>I've been helping some of my friends to setup and beautify their accounts and brands in several streaming platforms</dd>
+        </dl>
+        <hr>
+        <h3>Work Experience</h3>
+        <table style="border-spacing: 10px">
+            <thead>
+            <tr>
+                <th>Dates</th>
+                <th>Work</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>Present</td>
+                <td>Sustainability Data Intern at Transports Ministries</td>
+            </tr>
+            <tr>
+                <td>2021</td>
+                <td>Assisting in carpentry activities at Tavares Custom-made Furniture</td>
+            </tr>
+            <tr>
+                <td>2018-2019</td>
+                <td>English teacher for classes of various levels at Wizard.</td>
+            </tr>
+            </tbody>
+        </table>
+        <hr>
+        <h3>Skills</h3>
+        <table style="border-spacing: 10px">
+            <p><em>outdated</em></p>
+            <tr>
+                <td>HTML</td>
+                <td>⭐⭐⭐⭐⭐</td>
+                <td>Python</td>
+                <td>⭐⭐</td>
+            </tr>
+            <tr>
+                <td>Flutter</td>
+                <td>⭐⭐</td>
+                <td>Git</td>
+                <td>⭐⭐⭐⭐</td>
+            </tr>
+        </table>
+        <hr>
+        <table style="border-spacing: 10px">
+            <td><a href="contact-me.html">contact-me</a></td>
 
+            <td><a href="hobbies.html">hobbies</a></td>
+        </table>
     </main>
     <footer class="rodape">
         <p class="rodape-texto">Desenvolvido por <strong class="destaque-titulo">Ruan David</strong></p>
