init agenda page and style coding

--- a/pages/agenda.html
+++ b/pages/agenda.html
@@ -26,7 +26,35 @@
         </nav>
     </header>
     <main class="conteudo">
-        
+        <section class="agenda-eventos">
+            <h1 class="agenda-titulo">Agenda de Eventos</h1>
+            <section class="agenda-eventos-futuros">
+                <h2 class="agenda-item-titulo">Futuros</h2>
+                <div class="agenda-eventos-item">
+                    <h3 class="agenda-item-descricao">Aniversário do Silva</h3>
+                    <p class="agenda-item-data">04/10/2025 | O dia todo</p>
+                </div>
+                <div class="agenda-eventos-item">
+                    <h3 class="agenda-item-descricao">Aniversário da gatinha</h3>
+                    <p class="agenda-item-data">24/05/2025 | O dia todo</p>
+                </div>
+                <div class="agenda-eventos-item">
+                    <h3 class="agenda-item-descricao">Véspera de ano Novo</h3>
+                    <p class="agenda-item-data">31/12/2025 | 23:59</p>
+                </div>
+            </section>
+            <section class="agenda-eventos-passados">
+                <h2 class="agenda-item-titulo">Passados</h2>
+                <div class="agenda-eventos-item">
+                    <h3 class="agenda-item-descricao">Nascimento do Silva</h3>
+                    <p class="agenda-item-data">04/10/2001 | 23:59</p>
+                </div>
+                <div class="agenda-eventos-item">
+                    <h3 class="agenda-item-descricao">Aniversário da gatinha</h3>
+                    <p class="agenda-item-data">24/05/2025 | O dia todo</p>
+                </div>
+            </section>
+        </section>
     </main>
     <footer class="rodape">
         <p class="rodape-texto">Desenvolvido por <strong class="destaque-titulo">Ruan David</strong></p>
