finish faq page

--- a/pages/faq.html
+++ b/pages/faq.html
@@ -21,12 +21,50 @@
             <a href="./locadora.html">Locadora</a>
         </nav>
         <nav class="cabecalho-menu-responsivo">
-            <a href="">Home</a>
-            <a href="">Paginas</a>
+            <a href="../index.html">Home</a>
+            <a href="./paginas.html">Paginas</a>
         </nav>
     </header>
     <main class="conteudo">
-
+        <h1 class="apresentacao-conteudo-titulo" style="padding: 1rem 0;text-align: center">Perguntas Frequentes</h1>
+        <div class="secao-faq">
+            <details>
+                <summary>
+                    <b>Como faço para devolver um item?</b>
+                </summary>
+                <p class="resposta-faq">Para devolver um item entre em contato com nossa central no numero +55 61 9 9999-9999.</p>
+            </details>
+            <details>
+                <summary>
+                    <b>Quanto custa a entrega?</b>
+                </summary>
+                <p class="resposta-faq">Para clientes que compram conosco desde 2020 não pagam taxa, caso contrário a taxa vária conforme o estado e pode ser consultada em "endereço ficticio".</p>
+            </details>
+            <details>
+                <summary>
+                    <b>Como sei quantas pessoas abriram um e-mail?</b>
+                </summary>
+                <p class="resposta-faq">No momento nossos sistemas ainda não possibilitam essa verificação, aguarde as próximas atualizações.</p>
+            </details>
+            <details>
+                <summary>
+                    <b>Como faço para abrir uma conta?</b>
+                </summary>
+                <p class="resposta-faq">Para abrir uma conta entre no endereço: "ficticio" e clique em "cadastrar-se" abaixo da opção de login.</p>
+            </details>
+            <details>
+                <summary>
+                    <b>Como faço para criar um novo segmento?</b>
+                </summary>
+                <p class="resposta-faq">Para criar um novo segmento, na página de segmento, clique em novo segmento.</p>
+            </details>
+            <details>
+                <summary>
+                    <b>Como adiciono endereços de e-mail a uma lista de e-mail?</b>
+                </summary>
+                <p class="resposta-faq">No momento apenas os administradores podem adicionar novos endereços na lista, caso você seja um administrador utilize o faq logado na conta de administrador para tirar dúvidas.</p>
+            </details>
+        </div>
     </main>
     <footer class="rodape">
         <p class="rodape-texto">Desenvolvido por <strong class="destaque-titulo">Ruan David</strong></p>
