finish galeria page

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -21,12 +21,47 @@
             <a href="./locadora.html">Locadora</a>
         </nav>
         <nav class="cabecalho-menu-responsivo">
-            <a href="">Home</a>
-            <a href="">Paginas</a>
+            <a href="../index.html">Home</a>
+            <a href="./paginas.html">Paginas</a>
         </nav>
     </header>
     <main class="conteudo">
-
+        <!--
+            1. Um cabeçalho com o título “Galeria de Imagens”.
+            2. Uma seção de galeria com pelo menos três imagens.
+        -->
+        <h1 class="galeria-titulo">Galeria de Imagens</h1>
+        <section class="galeria-imagens">
+            <img class="imagem-galeria" src="https://conteudo.imguol.com.br/c/entretenimento/9b/2022/08/29/gato-preto-e-branco-1661805199275_v2_1920x1280.jpg" alt="gato preto e branco fofinho olhando para você com a cabeça um pouco inclinada para a esquerda">
+            <img class="imagem-galeria" src="https://images.unsplash.com/photo-1737305915580-f35b1ba63b4e?q=80&w=1965&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Homem negro vestido de casaco com estampas de mãos, o homem está com óculos escuros">
+            <img class="imagem-galeria" src="https://images.unsplash.com/photo-1741290606057-dfae12914684?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Revistas caídas no chão e um par de sapatos da pessoa que tirou a foto na frente das revistas">
+        </section>
+        <table class="tabela-imagens">
+            <thead>
+                <tr>
+                    <th>Nome</th>
+                    <th>Descrição</th>
+                    <th>Data</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Gato fofo</td>
+                    <td>Gato fofinho com pelagem preto e branco</td>
+                    <td>20/04/1999</td>
+                </tr>
+                <tr>
+                    <td>Modelo</td>
+                    <td>Homem negro vestido de casaco com estampas de mãos, o homem está com óculos escuros</td>
+                    <td>21/08/2030</td>
+                </tr>
+                <tr>
+                    <td>Revistas</td>
+                    <td>Revistas caídas no chão e um par de sapatos da pessoa que tirou a foto na frente das revistas</td>
+                    <td>30/05/2024</td>
+                </tr>
+            </tbody>
+        </table>
     </main>
     <footer class="rodape">
         <p class="rodape-texto">Desenvolvido por <strong class="destaque-titulo">Ruan David</strong></p>
