fix cabecalho-menu-responsivo hrefs

--- a/pages/agenda.html
+++ b/pages/agenda.html
@@ -21,8 +21,8 @@
             <a href="./locadora.html">Locadora</a>
         </nav>
         <nav class="cabecalho-menu-responsivo">
-            <a href="">Home</a>
-            <a href="">Paginas</a>
+            <a href="../index.html">Home</a>
+            <a href="./paginas.html">Paginas</a>
         </nav>
     </header>
     <main class="conteudo">
