--- a/pages/paginas.html
+++ b/pages/paginas.html
@@ -22,7 +22,7 @@
         </nav>
         <nav class="cabecalho-menu-responsivo">
             <a href="../index.html">Home</a>
-            <a href="">Paginas</a>
+            <a href="./paginas.html">Paginas</a>
         </nav>
     </header>
     <main class="conteudo">
