finish podcast page

--- a/pages/podcast.html
+++ b/pages/podcast.html
@@ -26,7 +26,26 @@
         </nav>
     </header>
     <main class="conteudo">
-
+        <h1 class="podcast-titulo">Frontend Nunca Mais</h1>
+        <div class="podcast-player">
+            <audio class="controle-player" controls src="../assets/790812__collectionofmemories__lo-fi-jazz-piano-loop.wav"></audio>
+        </div>
+            <table class="tabela-podcast">
+                <thead>
+                    <tr>
+                        <th>Título</th>
+                        <th>Data</th>
+                        <th>Duração</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Frontend é realmente mais fácil que backend? Entenda que não</td>
+                        <td>Neste ep, discutimos o motivo da dificuldade de quem começou no backend tentar fazer do front seu ganha pão.</td>
+                        <td>05/03/2023</td>
+                    </tr>
+                </tbody>
+            </table>
     </main>
     <footer class="rodape">
         <p class="rodape-texto">Desenvolvido por <strong class="destaque-titulo">Ruan David</strong></p>
